--- a/demo-2.html
+++ b/demo-2.html
@@ -5,6 +5,11 @@
     <title>f2e-workflow Test</title>
     <meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style type="text/css">
+    html,body{
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
     h1{
         text-align: center;
     }
