--- a/demo-1.html
+++ b/demo-1.html
@@ -12,6 +12,8 @@
     }
     h1{
         text-align: center;
+        padding: 20px 0;
+        margin: 0;
     }
     .logo{
         background-image:url(http://hzlzh.github.io/bigger.js/logo.png);
@@ -30,9 +32,5 @@
     <h1>f2e-workflow Test</h1>
     <div class="logo">Logo</div>
 
-    <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
-    <script>
-        Bigger(); // set style on <body>
-    </script>
 </body>
 </html>
