--- a/demo-2.html
+++ b/demo-2.html
@@ -12,6 +12,8 @@
     }
     h1{
         text-align: center;
+        padding: 20px 0;
+        margin: 0;
     }
     .logo{
         background-image:url(http://hzlzh.github.io/bigger.js/logo.png);
