--- a/demo-1.html
+++ b/demo-1.html
@@ -32,5 +32,9 @@
     <h1>f2e-workflow Test</h1>
     <div class="logo">Logo</div>
 
+    <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
+    <script>
+        Bigger(); // set style on <body>
+    </script>
 </body>
 </html>
