--- a/demo-2.html
+++ b/demo-2.html
@@ -32,7 +32,7 @@
     <h1>f2e-workflow Test</h1>
     <div class="logo">Logo</div>
 
-    <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
+    <script src="bigger.js" type="text/javascript"></script>
     <script>
         Bigger('logo',320); // set style on <div class="logo"> only
     </script>
