--- a/demo-1.html
+++ b/demo-1.html
@@ -1,40 +1,50 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>f2e-workflow Test</title>
-    <meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-    html,body{
-        margin: 0;
-        padding: 0;
-        height: 100%;
-    }
-    h1{
-        text-align: center;
-        padding: 20px 0;
-        margin: 0;
-    }
-    .logo{
-        background-image:url(http://hzlzh.github.io/bigger.js/logo.png);
-        width:150px;
-        height:150px;
-        display: block;
-        margin: 0 auto;
-        background-size: 150px;
-        background-repeat: no-repeat;
-    }
-    </style>
-    
+	<meta charset="UTF-8">
+	<title>bigger.js Test</title>
+	<meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<style type="text/css">
+		html, body {
+			margin: 0;
+			padding: 0;
+			height: 100%;
+		}
+
+		h1 {
+			text-align: center;
+			padding: 20px 0;
+			margin: 0;
+		}
+		.des{
+			text-align: center;
+		}
+		strong{
+			color: #ff333a;
+		}
+		.logo {
+			background-image: url(http://hzlzh.github.io/bigger.js/logo.png);
+			width: 150px;
+			height: 150px;
+			display: block;
+			margin: 0 auto;
+			text-indent: -9999px;
+			background-size: 150px;
+			background-repeat: no-repeat;
+		}
+	</style>
 </head>
 <body class="yyy">
 
-    <h1>f2e-workflow Test</h1>
-    <div class="logo">Logo</div>
+	<h1>bigger.js Test</h1>
 
-    <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
-    <script>
-        Bigger(); // set style on <body>
-    </script>
+	<div class="des"><strong>without</strong> `position:fixed` DOM.</div>
+	<div class="logo">image</div>
+
+	<script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
+	<script>
+		Bigger(); // set style on <body>
+	</script>
+
 </body>
 </html>
