--- a/demo-2.html
+++ b/demo-2.html
@@ -1,40 +1,91 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>f2e-workflow Test</title>
-    <meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-    html,body{
-        margin: 0;
-        padding: 0;
-        height: 100%;
-    }
-    h1{
-        text-align: center;
-        padding: 20px 0;
-        margin: 0;
-    }
-    .logo{
-        background-image:url(http://hzlzh.github.io/bigger.js/logo.png);
-        width:150px;
-        height:150px;
-        display: block;
-        margin: 0 auto;
-        background-size: 150px;
-        background-repeat: no-repeat;
-    }
-    </style>
-    
+	<meta charset="UTF-8">
+	<title>bigger.js Test 2</title>
+	<meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<style type="text/css">
+		html, body {
+			margin: 0;
+			padding: 0;
+			height: 100%;
+		}
+
+		h1 {
+			text-align: center;
+			padding: 20px 0;
+			margin: 0;
+		}
+		.des{
+			text-align: center;
+		}
+		strong{
+			color: #ff333a;
+		}
+		.logo {
+			background-image: url(http://hzlzh.github.io/bigger.js/logo.png);
+			width: 150px;
+			height: 150px;
+			display: block;
+			margin: 0 auto;
+			background-size: 150px;
+			background-repeat: no-repeat;
+		}
+
+		.banner {
+			height: 50px;
+			line-height: 50px;
+			padding-left: 10px;
+			width: 100%;
+			display: block;
+			background-color: rgba(255,50,58,0.8);
+			top: 0;
+			z-index: 999;
+		}
+
+		.fixed {
+			position: fixed;
+		}
+	</style>
+
 </head>
 <body class="yyy">
 
-    <h1>f2e-workflow Test</h1>
-    <div class="logo">Logo</div>
+<!--Put all the fixed DOM out of `#un-fixed`-->
+<div class="banner fixed">`fixed` item will not be scaled!</div>
 
-    <script src="bigger.js" type="text/javascript"></script>
-    <script>
-        Bigger('logo',320); // set style on <div class="logo"> only
-    </script>
+<!--bigger.js only scale `#un-fixed` -->
+<div id="un-fixed">
+	<h1>bigger.js Test</h1>
+
+	<div class="des"><strong>with</strong> `position:fixed` DOM.</div>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<div class="logo">image</div>
+</div>
+
+<!--
+<script src="http://zeptojs.com/zepto.min.js" type="text/javascript"></script>
+<script>
+	Bigger($('#un-fixed')[0], 320); // set style on <div id="un-fixed"> only
+</script>
+-->
+
+<script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
+<script>
+	Bigger(document.getElementById('un-fixed'), 320); // set style on <div id="un-fixed"> only
+</script>
+
 </body>
 </html>
