--- a/demo-2.html
+++ b/demo-2.html
@@ -78,14 +78,14 @@
 <!--
 <script src="http://zeptojs.com/zepto.min.js" type="text/javascript"></script>
 <script>
-	Bigger($('#un-fixed')[0], 320); // set style on <div id="un-fixed"> only
+	Bigger($('#unFixed')[0], 320); // set style on <div id="unFixed"> only
 </script>
 -->
 
 <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
 <script>
-	Bigger(document.getElementById('bannerFixed'), 320, true); // zoom on <div id="bannrFixed"> only
-	Bigger(document.getElementById('un-fixed'), 320); // set style on <div id="un-fixed"> only
+	Bigger(document.getElementById('doFixed'), 320, true); // zoom on <div id="doFixed"> only
+	Bigger(document.getElementById('unFixed'), 320); // set style on <div id="unFixed"> only
 </script>
 
 </body>
