--- a/demo-2.html
+++ b/demo-2.html
@@ -52,7 +52,7 @@
 <body class="yyy">
 
 <!--Put all the fixed DOM out of `#un-fixed`-->
-<div id="doFixed" class="banner fixed">`fixed` item will not be scaled!</div>
+<div id="doFixed" class="banner fixed">`fixed` item with zoom!</div>
 
 <!--bigger.js only scale `#un-fixed` -->
 <div id="un-fixed">
