--- a/demo-2.html
+++ b/demo-2.html
@@ -55,7 +55,7 @@
 <div id="doFixed" class="banner fixed">`fixed` item with zoom!</div>
 
 <!--bigger.js only scale `#un-fixed` -->
-<div id="un-fixed">
+<div id="unfixed">
 	<h1>bigger.js Test</h1>
 
 	<div class="des"><strong>with</strong> `position:fixed` DOM.</div>
