--- a/demo-2.html
+++ b/demo-2.html
@@ -51,11 +51,11 @@
 </head>
 <body class="yyy">
 
-<!--Put all the fixed DOM out of `#un-fixed`-->
+<!--Put all the fixed DOM out of `#doFixed`-->
 <div id="doFixed" class="banner fixed">`fixed` item with zoom!</div>
 
-<!--bigger.js only scale `#un-fixed` -->
-<div id="unfixed">
+<!--bigger.js only scale `#unFixed` -->
+<div id="unFixed">
 	<h1>bigger.js Test</h1>
 
 	<div class="des"><strong>with</strong> `position:fixed` DOM.</div>
