--- a/demo-3.html
+++ b/demo-3.html
@@ -133,68 +133,9 @@ document.write("<script async src='/browser-sync/browser-sync-client.2.9.11.js'>
     </div>
 </div>
 
-<script type="text/javascript">
-	/* bigger.js v1.0.4 | https://github.com/hzlzh/bigger.js (under MIT license) */
-(function () {
-    "use strict";
-
-    var Library = function (node, realWidth, type) {
-        // set hight for scroll use
-        // node.style.height = node.scrollHeight + 'px';
-
-        function bigger() {
-
-            if (window.innerWidth !== realWidth || window.orientation === 0 || window.orientation === 180) {
-                // main function
-                node.style.width = realWidth + "px";
-
-                if(type == 'rem' && document.documentElement.dataset.rem){
-                	document.documentElement.style.fontSize = window.innerWidth / realWidth * document.documentElement.dataset.rem + "px"
-                }
-                else if(type){
-                    node.style.zoom = window.innerWidth / realWidth;
-                }else{
-                    node.style.webkitTransform = "scale(" + window.innerWidth / realWidth + ")";
-                    // one page with no scroll
-                    // node.style.height = window.innerHeight/(window.innerWidth / realWidth) + "px";
-                    node.style.webkitTransformOrigin = "0 0";
-                }
-            }
-        }
-
-        function run() {
-            bigger();
-            // fix screen rotate animation time
-            setTimeout(function () {
-                bigger();
-            }, 200);
-        }
-
-        // run the first time
-        bigger();
-
-        // listen to mobile screen resize event
-        window.addEventListener(window.hasOwnProperty('onorientationchange') ? "orientationchange" : "resize", run, false);
-        return this;
-    };
-
-    var Bigger = function (obj, realWidth, type) {
-        // type true is fixed Dom
-        if (isNaN(realWidth)) { realWidth = 320; } // 320px design width as default
-        if (!obj) {
-            obj = document.body; // style add to <body> as default
-        }
-        return new Library(obj, realWidth, type);
-    };
-
-    if (!window.Bigger) {
-        window.Bigger = Bigger;
-    }
-}());
-</script>
-<!-- <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script> -->
+<script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
 <script>
-	Bigger(document.getElementById('doFixed'), 320, 'rem'); // zoom on <div id="doFixed"> only
+	Bigger(document, 320, 'rem'); // zoom on <div id="doFixed"> only
 </script>
 
 </body>
