--- a/demo-3.html
+++ b/demo-3.html
@@ -123,11 +123,11 @@ document.write("<script async src='/browser-sync/browser-sync-client.2.9.11.js'>
     <div style="width: 15rem; height: 12.35rem; top: 24.7rem; left: 0.55rem; position: absolute; overflow: hidden">
         <div class="slider-box">
             <div class="slider" style="width: 39.5rem">
-                <div class="slider-item"><img width="150" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/3297674768b3f44da8c18b02890fec5d.jpg" alt=""></div>
-                <div class="slider-item"><img width="150" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/13a482464298bbfbef9229c8d8eda867.jpg" alt=""></div>
-                <div class="slider-item"><img width="150" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/8ace09a12ee12c595eda76ae3e17cc7c.jpg" alt=""></div>
-                <div class="slider-item"><img width="150" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/21bf06e4f10b8db1c17b7831d85d7fe7.jpg" alt=""></div>
-                <div class="slider-item"><img width="150" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/0d0478599ffe447993b4c41f22a229d5.jpg" alt=""></div>
+                <div class="slider-item"><img style="width:7.5rem" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/3297674768b3f44da8c18b02890fec5d.jpg" alt=""></div>
+                <div class="slider-item"><img style="width:7.5rem" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/13a482464298bbfbef9229c8d8eda867.jpg" alt=""></div>
+                <div class="slider-item"><img style="width:7.5rem" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/8ace09a12ee12c595eda76ae3e17cc7c.jpg" alt=""></div>
+                <div class="slider-item"><img style="width:7.5rem" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/21bf06e4f10b8db1c17b7831d85d7fe7.jpg" alt=""></div>
+                <div class="slider-item"><img style="width:7.5rem" src="http://wximg.gtimg.com/wxgc/_events/20151228-game-mingyunzhilv/0d0478599ffe447993b4c41f22a229d5.jpg" alt=""></div>
             </div>
         </div>
     </div>
