--- a/demo-3.html
+++ b/demo-3.html
@@ -135,7 +135,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.2.9.11.js'>
 
 <script src="http://hzlzh.github.io/bigger.js/bigger.js" type="text/javascript"></script>
 <script>
-	Bigger(document, 320, 'rem'); // zoom on <div id="doFixed"> only
+	Bigger(document, 320, 'rem'); // Use `REM` scale plan
 </script>
 
 </body>
